bk_ida/gobmkida/c1/extend_neighbor_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3683:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[( _QWORD)v4] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3685:31: error: use of undeclared identifier 'byte_9AA89F'
if ( v18 == ( unsigned __int8)byte_9AA89F[( _QWORD)v4] ) 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3710:6: error: use of undeclared identifier 'byte_9AA89E'
&& ( byte_9AA89E[( _QWORD)v4] != ( _BYTE)v5 || string[239].neighborlist[( _QWORD)v4 + 159] != s) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3719:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[( _QWORD)v4] ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3721:31: error: use of undeclared identifier 'byte_9AA88C'
if ( v18 == ( unsigned __int8)byte_9AA88C[( _QWORD)v4] ) 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3748:6: error: use of undeclared identifier 'byte_9AA88D'
&& ( byte_9AA88D[( _QWORD)v4] != ( _BYTE)v5 || string[239].neighborlist[( _QWORD)v4 + 142] != s) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/engine/board.c:3784:6: error: use of undeclared identifier 'byte_9AA88D'
&& ( byte_9AA88D[( _QWORD)v4] != ( _BYTE)v5 || string[239].neighborlist[( _QWORD)v4 + 142] != s) ) 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/extend_neighbor_string/src/obj/1/board.o] Error 1
